Melhorias
* notificação
* validações
* melhoria no backend
